# simpletd

./: README.md  pyproject.toml
src/simpletd/: __init__.py  simpletd.py
src/tdjson/: __init__.py  tdjson.py
