[project]
name = "simpletd"
version = "0.1.0"
description = "Simplest tdjson client with some improovements"
readme = "README.md"
authors = [
    { name = "sharedobject", email = "aww@hell.nah" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
